<resources>
    <string name="app_name">Medis</string>
    <string name="init_download">Init Download</string>
    <string name="start_download">Start download</string>
    <string name="connecting">Connecting ...</string>
    <string name="connected">Connected</string>
    <string name="downloading">Downloading ...</string>
    <string name="Download_complete">Download Complete</string>
    <string name="Download_paused">Download Paused</string>
    <string name="Download_Canceled">Download Canceled</string>
    <string name="Download_Failed">Download Failed</string>
    <string name="select_your_language">Please choose your language .</string>
    <string name="select_your_currency">Please choose your currency .</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="violet">Violet</string>
    <string name="brown">Brown</string>
    <string name="Dark">Dark</string>
    <string name="theme">Theme</string>
    <string name="verify">Verify</string>
    <string name="enter_verify_code_for_check">Please enter the code sent</string>
    <string name="cancell">Cancell</string>
    <string name="version">Version</string>
    <string name="try_again">Try again</string>
    <string name="search_hint">Search</string>
    <string name="all">All</string>
    <string name="totoal_amount">Total Amount</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="stop">Stop</string>
    <string name="open">Open</string>
    <string name="skip">Skip</string>
    <string name="content">Content</string>
    <string name="topic">Topic</string>
    <string name="ok">Ok</string>
    <string name="register">Register</string>
    <string name="login_guest">Log in as Guest</string>
    <string name="please_wait">Please wait ...</string>
    <string name="mobile">Mobile</string>
    <string name="firstname">FirstName</string>
    <string name="surname">SurName</string>
    <string name="fill_field_start">Please fill field to start</string>
    <string name="mobile_number_entered_is_not_valid">Mobile number entered is not valid</string>
    <string name="email_entered_is_not_valid">Email entered is not valid</string>
    <string name="English">English</string>
    <string name="Persian">Persian</string>
    <string name="Arabic">Arabic</string>
    <string name="French">French</string>
    <string name="German">German</string>
    <string name="did_not_get_code">I did not get code!</string>
    <string name="VerificationHelp">We have sent the code for you , if you dont get this after a few minute click on below link , tank you.</string>
    <string name="ms_back">BACK</string>
    <string name="ms_next">NEXT</string>
    <string name="ms_complete">COMPLETE</string>
    <string name="select_charity">Charity</string>
    <string name="select_price">Price</string>
    <string name="select_date">Select Date</string>
    <string name="review">Review</string>
    <string name="user_account">User Account</string>
    <string name="random_selection">Random selection</string>
    <string name="recognizer_not_present">Recognizer not present</string>
    <string name="selected_charities">First, select the charity or charity you want from the charity list below .</string>
    <string name="your_information">Your Information</string>
    <string name="settings">Settings</string>
    <string name="Log_out">Log out</string>
    <string name="my_language">English</string>
    <string name="amount">Amount</string>
    <string name="rial">Rial</string>
    <string name="toman">Toman</string>
    <string name="dollar">Dollar</string>
    <string name="set_price_for_charities">You can assign a fee for each of the selected charities.</string>
    <string name="ok_btn">Ok</string>
    <string name="cancel_btn">Cancel</string>
</resources>
