<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.holding.medis.components.flowinggradient.FlowingGradient
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:transition_drawable="@drawable/trans"
                app:transition_duration="4000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutDirection="ltr"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/btn_viewmode"
                    android:layout_width="@dimen/toolbar_height"
                    android:layout_height="match_parent"
                    android:background="?android:selectableItemBackground"
                    android:padding="@dimen/_15sdp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_view_list_black_24dp" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.holding.medis.components.TextViewCell
                        android:id="@+id/txt_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        app:vc_font="IRANSansMobile_Bold" />

                </LinearLayout>


                <ImageView
                    android:id="@+id/btn_profile"
                    android:layout_width="@dimen/toolbar_height"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="?android:selectableItemBackground"
                    android:padding="@dimen/_18sdp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_profile" />


            </LinearLayout>
        </FrameLayout>


    </android.support.v7.widget.Toolbar>

    <com.holding.medis.components.stepper.StepperLayout
        android:id="@+id/stepperLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"
        app:ms_activeStepColor="@color/color_accent"
        app:ms_tabStepDividerWidth="@dimen/_30sdp"
        app:ms_bottomNavigationBackground="@color/selector_smoke_white_normal"
        app:ms_nextButtonColor="@color/selector_gray_normal"
        app:ms_completeButtonColor="@color/color_accent"
        app:ms_backButtonColor="@color/selector_gray_light"
        app:ms_backButtonText="@string/ms_back"
        app:ms_nextButtonText="@string/ms_next"
        app:ms_completeButtonText="@string/ms_complete"
        app:ms_stepperType="tabs"
        app:ms_stepperFeedbackType="tabs|disabled_bottom_navigation|content_overlay">

    </com.holding.medis.components.stepper.StepperLayout>

</FrameLayout>
