<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.holding.medis.components.flowinggradient.FlowingGradient
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:transition_drawable="@drawable/trans"
                app:transition_duration="4000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="@dimen/toolbar_height"
                    android:layout_height="match_parent"
                    android:background="?android:selectableItemBackground"
                    android:padding="@dimen/_14sdp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_arrow_back_black_96dp"/>

                <com.holding.medis.components.TextViewCell
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/user_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_title"
                    app:vc_font="IRANSansMobile_Bold"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"></LinearLayout>

                <FrameLayout
                    android:layout_width="@dimen/toolbar_height"
                    android:layout_height="match_parent"
                    android:visibility="gone">
                    <ImageView
                        android:id="@+id/btn_save"
                        android:layout_width="@dimen/toolbar_height"
                        android:layout_height="match_parent"
                        android:background="?android:selectableItemBackground"
                        android:padding="@dimen/_14sdp"
                        android:tint="@color/white"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_check_black_24dp" />

                    <ProgressBar
                        android:id="@+id/prg_save"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:indeterminateTint="@color/white"
                        android:visibility="gone" />

                </FrameLayout>

            </LinearLayout>
        </FrameLayout>


    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.holding.medis.components.TextViewCell
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/your_information"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/text_message"
                app:vc_font="IRANSansMobile_Bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layoutDirection="ltr"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding">

                <LinearLayout
                    android:id="@+id/btn_mobile"
                    android:background="?android:selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <com.holding.medis.components.TextViewCell
                        android:id="@+id/txt_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="09306741350"
                        android:textColor="@color/selector_gray_normal"
                        android:textSize="@dimen/text_message"
                        app:vc_font="IRANSansMobile"/>

                    <com.holding.medis.components.TextViewCell
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile"
                        android:textColor="@color/selector_gray_normal"
                        android:textSize="@dimen/_9sdp"
                        app:vc_font="IRANSansMobile"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/selector_smoke_white_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layoutDirection="ltr"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding">

                <LinearLayout
                    android:id="@+id/btn_firstname"
                    android:background="?android:selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <com.holding.medis.components.TextViewCell
                        android:id="@+id/txt_firstname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="hosein-ra73@yahoo.com"
                        android:textColor="@color/selector_gray_normal"
                        android:textSize="@dimen/text_message"
                        app:vc_font="IRANSansMobile"/>

                    <com.holding.medis.components.TextViewCell
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firstname"
                        android:textColor="@color/selector_gray_normal"
                        android:textSize="@dimen/_9sdp"
                        app:vc_font="IRANSansMobile"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/selector_smoke_white_light" />

            <LinearLayout
                android:id="@+id/btn_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:gravity="left"
                android:layoutDirection="ltr"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <com.holding.medis.components.TextViewCell
                        android:id="@+id/txt_surname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ho3ein"
                        android:textColor="@color/selector_gray_normal"
                        android:textSize="@dimen/text_message"
                        app:vc_font="IRANSansMobile"/>

                    <com.holding.medis.components.TextViewCell
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/surname"
                        android:textColor="@color/selector_gray_normal"
                        android:textSize="@dimen/_9sdp"
                        app:vc_font="IRANSansMobile"/>
                </LinearLayout>


            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/selector_smoke_white_dark" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_7sdp"
                android:background="@color/selector_smoke_white_normal" />

            <com.holding.medis.components.TextViewCell
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/settings"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/text_message"
                app:vc_font="IRANSansMobile_Bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding">

                <com.holding.medis.components.ButtonCell
                    android:id="@+id/btn_language"
                    android:background="?android:selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_10sdp"
                    android:stateListAnimator="@null"
                    android:text="@string/my_language"
                    android:textColor="@color/selector_gray_normal"
                    android:textSize="@dimen/text_message"
                    app:vc_font="IRANSansMobile"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/selector_smoke_white_normal" />

                <com.holding.medis.components.ButtonCell
                    android:id="@+id/btn_currency"
                    android:background="?android:selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_10sdp"
                    android:stateListAnimator="@null"
                    android:text="@string/toman"
                    android:textColor="@color/selector_gray_normal"
                    android:textSize="@dimen/text_message"
                    app:vc_font="IRANSansMobile"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/selector_smoke_white_normal" />

                <com.holding.medis.components.ButtonCell
                    android:id="@+id/btn_logout"
                    android:background="?android:selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_10sdp"
                    android:stateListAnimator="@null"
                    android:text="@string/Log_out"
                    android:textColor="@color/selector_gray_normal"
                    android:textSize="@dimen/text_message"
                    app:vc_font="IRANSansMobile"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_6sdp"
        android:layout_marginTop="@dimen/toolbar_height"
        android:background="@drawable/header_shadow" />
</FrameLayout>
