<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/selector_smoke_white_light"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                app:layout_collapseMode="parallax">

                <com.holding.medis.components.TextViewCell
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/selector_gray_normal"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/selected_charities"
                    app:vc_font="IRANSansMobile"/>

                <LinearLayout
                    android:id="@+id/container_search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|left"
                        android:orientation="horizontal">

                        <com.holding.medis.components.smoothcheckbox.SmoothCheckBox
                            android:id="@+id/smooth_checkbox_all"
                            android:layout_width="@dimen/_17sdp"
                            android:layout_height="@dimen/_17sdp"
                            android:visibility="visible"
                            app:color_checked="#149A45" />

                        <com.holding.medis.components.TextViewCell
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/selector_gray_light"
                            android:textSize="@dimen/_9sdp"
                            android:paddingLeft="@dimen/padding"
                            android:paddingRight="@dimen/padding"
                            android:layout_gravity="center"
                            android:text="@string/all"
                            app:vc_font="IRANSansMobile"/>

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spn_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"/>


                        <com.holding.medis.components.TextViewCell
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/selector_gray_light"
                            android:textSize="@dimen/_9sdp"
                            android:paddingLeft="@dimen/padding"
                            android:paddingRight="@dimen/padding"
                            android:layout_gravity="center"
                            android:text="@string/random_selection"
                            app:vc_font="IRANSansMobile"/>

                    </LinearLayout>


                </FrameLayout>
            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/selector_smoke_white_dark"
            android:layout_gravity="top"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcl_charity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/prg_charity"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/color_accent"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>
